--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "devDependencies": {
         "typescript": "^4.5.4",
         "eslint": "^8.5.0"
+    },
+    "dependencies": {
+        "@types/jquery": "^3.5.10"
     }
 }
