--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
         "node": ">=16"
     },
     "scripts": {
+        "eslint" : "eslint src",
         "compileTs": "tsc src/OSEventListener.ts"
     },
     "devDependencies": {
         "eslint": "^8.5.0",
         "mocha": "^9.1.3",
-        "typescript": "^4.5.4"
+        "typescript": "^4.5.4",
+        "@typescript-eslint/eslint-plugin": "^5.8.0",
+        "@typescript-eslint/parser": "^5.8.0"
     },
     "dependencies": {
         "@types/jquery": "^3.5.10"
