--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -6,6 +6,7 @@
     "compilerOptions": {
         "target": "ES2020",
          "alwaysStrict": true,
-         "module": "ES2020"
+         "module": "ES2020",
+         "strict": true
     }
 }
