--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -7,6 +7,12 @@
         "target": "ES2020",
          "alwaysStrict": true,
          "module": "ES2020",
-         "strict": true
-    }
+         "strict": true,
+         "outDir": "../dist/js",
+         "sourceMap": true
+    },
+    "files": [
+        "OSEventListener.ts",
+        "OSDomEventListener.ts"
+    ]
 }
